[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Theme2/main_menu_background.png" type="Texture" id=1]
[ext_resource path="res://Screens/StartMenu/StartMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/tinyfont.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Assets/Logo/dash_hunter_logo.png" type="Texture" id=4]
[ext_resource path="res://Assets/Theme2/main-menu-background.png" type="Texture" id=5]
[ext_resource path="res://Assets/Theme3/aap-64-32x.png" type="Texture" id=6]
[ext_resource path="res://Assets/Theme2/menu_button.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/theme_font/uni_05_53_8px.fnt" type="BitmapFont" id=8]
[ext_resource path="res://Effects/FallingLeafEnv.tscn" type="PackedScene" id=9]

[node name="StartMenu" type="CanvasLayer"]
layer = 99
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aap-64-32x" type="Sprite" parent="Background"]
position = Vector2( 278, -50 )
texture = ExtResource( 6 )

[node name="dash_hunter_logo" type="TextureRect" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -134.0
margin_right = 128.0
margin_bottom = -70.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="TextureButton" parent="VBoxContainer"]
margin_right = 96.0
margin_bottom = 28.0
rect_min_size = Vector2( 96, 28 )
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="VBoxContainer/NewGame"]
margin_right = 96.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 8 )
text = "NEW GAME"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueGame" type="TextureButton" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 96.0
margin_bottom = 60.0
rect_min_size = Vector2( 96, 28 )
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="VBoxContainer/ContinueGame"]
margin_right = 96.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 8 )
text = "CONTINUE GAME"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 96.0
margin_bottom = 92.0
rect_min_size = Vector2( 96, 28 )
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="VBoxContainer/Settings"]
margin_right = 96.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 8 )
text = "SETTINGS"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 96.0
margin_bottom = 124.0
rect_min_size = Vector2( 96, 28 )
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="VBoxContainer/Credits"]
margin_right = 96.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 8 )
text = "CREDITS"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGame" type="TextureButton" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 96.0
margin_bottom = 156.0
rect_min_size = Vector2( 96, 28 )
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="VBoxContainer/QuitGame"]
margin_right = 96.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 8 )
text = "QUIT"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 118.0
margin_top = 20.0
margin_right = 162.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 3 )
text = "DASH HUNTER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FallingLeafEnv" parent="." instance=ExtResource( 9 )]
position = Vector2( 460, -104 )

[node name="FallingLeafEnv2" parent="." instance=ExtResource( 9 )]
position = Vector2( 656, 0 )

[node name="FallingLeafEnv3" parent="." instance=ExtResource( 9 )]
position = Vector2( 690, 106 )
[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueGame" to="." method="_on_ContinueGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
